# amplifier-module-tool-youtube-dl

./: Makefile  README.md  SUPPORT.md  pyproject.toml
examples/: youtube-dl.md
src/amplifier_module_tool_youtube_dl/: __init__.py  youtube_tool.py
tests/: test_youtube_tool.py
