[project]
name = "amplifier-module-tool-youtube-dl"
version = "0.1.0"
description = "YouTube download tool with audio, video, and screenshot support for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Corporation" }
]
dependencies = [
    "amplifier-core",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.entry-points."amplifier.modules"]
"tool-youtube-dl" = "amplifier_module_tool_youtube_dl:YouTubeDLTool"

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-dev", subdirectory = "amplifier-core", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_tool_youtube_dl"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
